@@ -52,7 +52,12 @@ public:
     virtual Ice::ObjectPrx 
     getDirectProxy(const Ice::Current& current) const
     {
-	return _database->getAdapterDirectProxy(current.id.name);
+	Ice::ObjectPrx proxy = _database->getAdapterDirectProxy(current.id.name);
+	if(!proxy)
+	{
+	    throw Ice::ObjectNotExistException(__FILE__, __LINE__);
+	}
+	return proxy;
     }
 
     virtual void 
